# libcircle

./: .gitignore  .travis.yml  COPYING  HACKING.md  META  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  common.mk  config.h.in  config.h.in~  configure  configure.ac  index.html  libcircle.h  libcircle.pc.in  libcircle.spec  libcircleconfig.h  params.json  stamp-h2
doc/: Doxyfile.in  Makefile.am  Makefile.in
doc/man/: Makefile.am  Makefile.in
doc/man/man1/: dcopy.1  dstat.1
doc/man/man3/: CIRCLE_init.3
examples/: Makefile.am  Makefile.in
examples/dcopy/: Makefile.am  Makefile.in  README.md  dcopy.c  dcopy.h
examples/dstat/: Makefile.am  Makefile.in  README.md  dstat-plugins.h  dstat.c  dstat.h  hash.c  hash.h  sprintstatf.c  sprintstatf.h  vfprintstatf.c  vfprintstatf.h
examples/dstat/hiredis/: Makefile.am  Makefile.in
examples/dstat/plugins/: Makefile.am
examples/dstat/plugins/output/: Makefile.am
examples/dstat/plugins/output/redis/: dstat-redis.c
examples/dstat/plugins/output/stdout/: dstat-stdout.c
experimental/flex_queue/: Makefile  README.md  queue.c  queue.h  test.c
libcircle/: lib.c  lib.h  libcircle.h  log.h  multi.c  multi.h  queue.c  queue.h  token.c  token.h  worker.c  worker.h
m4/: libcircle.m4  lx_find_check.m4  lx_find_doxygen.m4  lx_find_loglevel.m4  lx_find_mpi.m4  lx_find_openssl.m4  lx_find_pkg_config.m4  lx_use_tompi.m4
src/: Makefile.am  Makefile.in  frame.c  lib.c  lib.h  libcircle.h  log.h  queue.c  queue.h  token.c  token.h  worker.c  worker.h
tests/: Makefile.am  Makefile.in  check_checkpoint.c  check_libcircle.c  check_queue.c
